--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
       <div class="passOption">
         <div class="option">
-        <input type="checkbox"class='uppercase checkbox'>
-        <output data-target="uppercase" > Include Uppercase Letters</output>
+        <input type="checkbox" id="uppercase" class='uppercase checkbox'>
+        <output data-target="uppercase" for="uppercase" > Include Uppercase Letters</output>
       </div>
       <div class="option">
         <input type="checkbox"  class='lowercase checkbox'>
