--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
       <div class="passOption">
         <div class="option">
         <input type="checkbox" id="uppercase" class='uppercase checkbox'>
-        <output data-target="uppercase" for="uppercase" > Include Uppercase Letters</output>
+        <label data-target="uppercase" for="uppercase" > Include Uppercase Letters</label>
       </div>
       <div class="option">
-        <input type="checkbox"  class='lowercase checkbox'>
-        <output data-target="lowercase" >Include Lowercase Letters</output>
+        <input type="checkbox" id="lowercase" class='lowercase checkbox'>
+        <label data-target="lowercase" for="lowercase">Include Lowercase Letters</label>
       </div>
       <div class="option">
-        <input type="checkbox"  class='numbers checkbox'>
-        <output data-target="numbers" >Include Numbers</output>
+        <input type="checkbox" id="numbers"  class='numbers checkbox'>
+        <label data-target="numbers" for="numbers" >Include Numbers</label>
       </div>
       <div class="option">
-        <input type="checkbox"  class='symbols checkbox'>
-        <output data-target="symbols" >Include Symbols</output>
+        <input type="checkbox" id="symbols"  class='symbols checkbox'>
+        <label data-target="symbols" for="symbols" >Include Symbols</label>
       </div>
 </div>
       <div class="passCheck">
